# ProiectPS

CrewsControl/: CMakeLists.txt  package.xml
CrewsControl_camera/: CMakeLists.txt  package.xml  setup.py
CrewsControl_camera/cfg/: ImageCompensationParams.cfg  ImageProjectionParams.cfg
CrewsControl_camera/launch/: extrinsic_camera_calibration.launch  intrinsic_camera_calibration.launch
CrewsControl_camera/nodes/: image_compensation  image_projection
CrewsControl_core/: CMakeLists.txt  package.xml  setup.py
CrewsControl_core/launch/: CrewsControl_core.launch
CrewsControl_core/nodes/: construction_core_mode_decider  construction_core_node_controller  parking_core_mode_decider  parking_core_node_controller  tunnel_core_mode_decider  tunnel_core_node_controller
CrewsControl_detect/: CMakeLists.txt  package.xml  setup.py
CrewsControl_detect/cfg/: DetectLaneParams.cfg
CrewsControl_detect/launch/: detect_construction.launch  detect_intersection.launch  detect_lane.launch  detect_level_crossing.launch  detect_parking.launch  detect_sign.launch  detect_tunnel.launch
CrewsControl_detect/nodes/: detect_construction  detect_construction_sign  detect_intersection  detect_intersection_sign  detect_lane  detect_parking  detect_parking_sign  detect_tunnel  detect_tunnel_sign
CrewsControl_driving/: CMakeLists.txt  package.xml  setup.py
CrewsControl_driving/launch/: CrewsControl_control_lane.launch  CrewsControl_control_moving.launch
CrewsControl_driving/nodes/: control_lane  control_moving
CrewsControl_msgs/: CMakeLists.txt  package.xml
turtlebot3_autorace_core/: CMakeLists.txt
turtlebot3_autorace_core/launch/: turtlebot3_autorace_core.launch
turtlebot3_autorace_detect/: CMakeLists.txt
