<?xml version="1.0"?>
<package format="2">
  <name>CrewsControl</name>
  <version>1.1.0</version>
  <description>
    CrewsControl ROS 1 packages (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="vasilica.badescu@student.upt.ro">Badescu Vasilica</author>
  <author email="vlad.budiu@student.upt.ro">Budiu Vlad</author>
  <author>Badescu Vasilica</author>
  <author>Budiu Vlad</author>
  <maintainer email="vasilica.badescu@student.upt.ro">Badescu Vasilica</maintainer>
  <maintainer email="vlad.budiu@student.upt.ro">Budiu Vlad</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>CrewsControl_camera</exec_depend>
  <exec_depend>CrewsControl_core</exec_depend>
  <exec_depend>CrewsControl_detect</exec_depend>
  <exec_depend>CrewsControl_driving</exec_depend>
  <exec_depend>CrewsControl_msgs</exec_depend>
  <export><metapackage/></export>
</package>
