<?xml version="1.0"?>
<package format="2">
  <name>CrewsControl_detect</name>
  <version>1.1.0</version>
  <description>
    PS
  </description>
   <license>Apache 2.0</license>
  <author email="vasilica.badescu@student.upt.ro">Badescu Vasilica</author>
  <author email="vlad.budiu@student.upt.ro">Budiu Vlad</author>
  <author>Badescu Vasilica</author>
  <author>Budiu Vlad</author>
  <maintainer email="vasilica.badescu@student.upt.ro">Badescu Vasilica</maintainer>
  <maintainer email="vlad.budiu@student.upt.ro">Budiu Vlad</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
</package>

