<?xml version="1.0"?>
<package format="2">
  <name>CrewsControl_msgs</name>
  <version>1.1.0</version>
  <description>The CrewsControl_msgs package
  </description>
  <author email="vasilica.badescu@student.upt.ro">Badescu Vasilica</author>
  <author email="vlad.budiu@student.upt.ro">Budiu Vlad</author>
  <author>Badescu Vasilica</author>
  <author>Budiu Vlad</author>
  <maintainer email="vasilica.badescu@student.upt.ro">Badescu Vasilica</maintainer>
  <maintainer email="vlad.budiu@student.upt.ro">Budiu Vlad</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
